Tidy and moving to Java 17 specifics